--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,49 +4,73 @@
 # This specific template is located at:
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Terraform.gitlab-ci.yml
 
-include:
-  - template: Terraform/Base.gitlab-ci.yml  # https://gitlab.com/gitlab-org/gitlab/blob/master/lib/gitlab/ci/templates/Terraform/Base.latest.gitlab-ci.yml
+# include:
+#   - template: Terraform/Base.gitlab-ci.yml  # https://gitlab.com/gitlab-org/gitlab/blob/master/lib/gitlab/ci/templates/Terraform/Base.latest.gitlab-ci.yml
 
-stages:
-  - stg_validate
-  - stg_plan
-  - stg_apply
-  - stg_destroy
+# stages:
+#   - stg_validate
+#   - stg_plan
+#   - stg_apply
+#   - stg_destroy
 
-jb-tf-validate:
-  stage: stg_validate
-  script:
-    - echo " Validating my terraform code"
-    - terraform validate
-  except:
-    refs:
-      - master
-jb-tf-plan:
-  stage: stg_plan
-  script:
-    - echo "Generating terraform plan and output to file 'plan' "
-    - terraform plan --out plan
-  artifacts:
-    paths:
-      - plan
+# jb-tf-validate:
+#   stage: stg_validate
+#   script:
+#     - echo " Validating my terraform code"
+#     - terraform validate
+#   except:
+#     refs:
+#       - master
+# jb-tf-plan:
+#   stage: stg_plan
+#   script:
+#     - echo "Generating terraform plan and output to file 'plan' "
+#     - terraform plan --out plan
+#   artifacts:
+#     paths:
+#       - plan
 
-jb-tf-apply:
-  stage: stg_apply
+# jb-tf-apply:
+#   stage: stg_apply
+#   script:
+#     - echo "Spinning up resources via terraform apply step"
+#     - terraform apply --auto-approve plan
+#     - terraform state list
+#   when: always
+#   allow_failure: false
+#   artifacts:
+#     paths:
+#       - terraform.tfstate
+# jb-tf-destroy:
+#   stage: stg_destroy
+#   script:
+#     - echo "Destroying resources"
+#     - terraform destroy --auto-approve
+#   when: manual
+#   only:
+#     refs:
+#       - develop
+
+build-job:
+  stage: build
   script:
-    - echo "Spinning up resources via terraform apply step"
-    - terraform apply --auto-approve plan
-    - terraform state list
-  when: always
-  allow_failure: false
-  artifacts:
-    paths:
-      - terraform.tfstate
-jb-tf-destroy:
-  stage: stg_destroy
+    - echo "Hello, $GITLAB_USER_LOGIN!"
+
+test-job1:
+  stage: test
   script:
-    - echo "Destroying resources"
-    - terraform destroy --auto-approve
-  when: manual
-  only:
-    refs:
-      - develop
+    - echo "This job tests something"
+
+test-job2:
+  stage: test
+  script:
+    - echo "This job tests something, but takes more time than test-job1."
+    - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
+    - echo "which simulates a test that runs 20 seconds longer than test-job1"
+    - sleep 20
+
+deploy-prod:
+  stage: deploy
+  script:
+    - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
+  environment: production
