--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,3 +74,6 @@ deploy-prod:
   script:
     - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
   environment: production
+
+tags:
+  - kvm
