--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,7 @@ test-job1:
   stage: test
   script:
     - echo "This job tests something"
+  tags: [kvm]
 
 test-job2:
   stage: test
@@ -69,12 +70,22 @@ test-job2:
     - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
     - echo "which simulates a test that runs 20 seconds longer than test-job1"
     - sleep 20
+  tags: [kvm]
 
 deploy-prod:
   stage: deploy
   script:
     - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
   environment: production
+  tags: [kvm]
+
+destroy-job:
+  stage: destroy
+  script:
+    - echo "Destroying environment ..."
+  tags: [kvm]
+
+
 
 # tags:
 #   - kvm
