--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,7 @@ test-job2:
   tags: [kvm]
 
 deploy-prod:
-  stage: deploy
+  stage: .post
   script:
     - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
   environment: production
