--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,20 +4,24 @@
 # This specific template is located at:
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Terraform.gitlab-ci.yml
 
-# include:
-#   - template: Terraform/Base.gitlab-ci.yml  # https://gitlab.com/gitlab-org/gitlab/blob/master/lib/gitlab/ci/templates/Terraform/Base.latest.gitlab-ci.yml
+include:
+  - template: Terraform/Base.gitlab-ci.yml  # https://gitlab.com/gitlab-org/gitlab/blob/master/lib/gitlab/ci/templates/Terraform/Base.latest.gitlab-ci.yml
 
-# stages:
-#   - stg_validate
-#   - stg_plan
-#   - stg_apply
-#   - stg_destroy
+stages:
+  - stg_validate
+  - stg_plan
+  - stg_apply
+  - stg_destroy
 
-# jb-tf-validate:
-#   stage: stg_validate
-#   script:
-#     - echo " Validating my terraform code"
-#     - terraform validate
+jb-tf-validate:
+  stage: stg_validate
+  script:
+    - echo " Validating my terraform code"
+    - terraform validate
+  rule:
+    - exists:
+      - vm.txt
+
 #   except:
 #     refs:
 #       - master
@@ -51,42 +55,37 @@
 #     refs:
 #       - develop
 
-build-job:
-  stage: build
-  script:
-    - echo "Hello, $GITLAB_USER_LOGIN!"
-  tags: [kvm]
+# build-job:
+#   stage: build
+#   script:
+#     - echo "Hello, $GITLAB_USER_LOGIN!"
+#   tags: [kvm]
 
-test-job1:
-  stage: test
-  script:
-    - echo "This job tests something"
-  tags: [kvm]
+# test-job1:
+#   stage: test
+#   script:
+#     - echo "This job tests something"
+#   tags: [kvm]
 
-test-job2:
-  stage: test
-  script:
-    - echo "This job tests something, but takes more time than test-job1."
-    - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
-    - echo "which simulates a test that runs 20 seconds longer than test-job1"
-    - sleep 20
-  tags: [kvm]
+# test-job2:
+#   stage: test
+#   script:
+#     - echo "This job tests something, but takes more time than test-job1."
+#     - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
+#     - echo "which simulates a test that runs 20 seconds longer than test-job1"
+#     - sleep 20
+#   tags: [kvm]
 
-deploy-prod:
-  stage: deploy
-  script:
-    - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
-  environment: production
-  tags: [kvm]
+# deploy-prod:
+#   stage: deploy
+#   script:
+#     - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
+#   environment: production
+#   tags: [kvm]
 
-destroy-job:
-  stage: .post
-  script:
-    - echo "Manually trigger"
-  when: manual
-  tags: [kvm]
-
-
-
-# tags:
-#   - kvm
+# destroy-job:
+#   stage: .post
+#   script:
+#     - echo "Manually trigger"
+#   when: manual
+#   tags: [kvm]
