--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,40 +13,87 @@ stages:
   - stg_apply
   - stg_destroy
 
-jb-tf-validate:
+job-tf-validate:
   stage: stg_validate
   script:
     - echo " Validating my terraform code"
     - terraform validate
-  except:
-    refs:
-      - master
+  rules:
+    - exists:
+        - !vm.txt
+      when: never
+    - when: always
+  tags: [kvm]
+#   needs:
+#     - job: check-vm-txt
+#   except:
+#     refs:
+#       - master
+
 jb-tf-plan:
   stage: stg_plan
   script:
-    - echo "Generating terraform plan and output to file 'plan' "
-    - terraform plan --out plan
-  artifacts:
-    paths:
-      - plan
+    - random_string=$(echo $RANDOM | md5sum | head -c 5);
+    - echo "Generating terraform environment file"
+    - ./not-tfgen.sh $GITLAB_USER_LOGIN_${random_string} vm2.txt
+  tags: [kvm]
+  # artifacts:
+  #   paths:
+  #     - plan
 
-jb-tf-apply:
-  stage: stg_apply
-  script:
-    - echo "Spinning up resources via terraform apply step"
-    - terraform apply --auto-approve plan
-    - terraform state list
-  when: always
-  allow_failure: false
-  artifacts:
-    paths:
-      - terraform.tfstate
-jb-tf-destroy:
-  stage: stg_destroy
-  script:
-    - echo "Destroying resources"
-    - terraform destroy --auto-approve
-  when: manual
-  only:
-    refs:
-      - develop
+# jb-tf-apply:
+#   stage: stg_apply
+#   script:
+#     - echo "Spinning up resources via terraform apply step"
+#     - terraform apply --auto-approve plan
+#     - terraform state list
+#   when: always
+#   allow_failure: false
+#   artifacts:
+#     paths:
+#       - terraform.tfstate
+# jb-tf-destroy:
+#   stage: stg_destroy
+#   script:
+#     - echo "Destroying resources"
+#     - terraform destroy --auto-approve
+#   when: manual
+#   only:
+#     refs:
+#       - develop
+
+# build-job:
+#   stage: build
+#   script:
+#     - echo "Hello, $GITLAB_USER_LOGIN!"
+#   tags: [kvm]
+
+# test-job1:
+#   stage: test
+#   script:
+#     - echo "This job tests something"
+#   tags: [kvm]
+
+# test-job2:
+#   stage: test
+#   script:
+#     - echo "This job tests something, but takes more time than test-job1."
+#     - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
+#     - echo "which simulates a test that runs 20 seconds longer than test-job1"
+#     - sleep 20
+#   tags: [kvm]
+
+# deploy-prod:
+#   stage: deploy
+#   script:
+#     - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
+#   environment: production
+#   tags: [kvm]
+
+# destroy-job:
+#   stage: .post
+#   script:
+#     - echo "Manually trigger"
+#   when: manual
+#   tags: [kvm]
+
