--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,7 @@ jb-tf-plan:
     - random_string=$(echo $RANDOM | md5sum | head -c 5);
     - echo "Generating terraform environment file"
     - ./not-tfgen.sh $GITLAB_USER_LOGIN_${random_string} vm2.txt
+    - if [ -f "vm2.txt" ]; then exit 1; fi
   tags: [kvm]
   # artifacts:
   #   paths:
