--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,9 @@ jb-tf-plan:
   script:
     - random_string=$(echo $RANDOM | md5sum | head -c 5);
     - echo "Generating terraform environment file"
-    - ./not-tfgen.sh $GITLAB_USER_LOGIN_${random_string} vm.txt
+    - echo $GITLAB_USER_LOGIN
+    - echo $random_string
+    - ./not-tfgen.sh $GITLAB_USER_LOGIN_${random_string} vm2.txt
   rules:
     - exists:
         - vm.txt
