--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,13 +8,13 @@ include:
   - template: Terraform/Base.gitlab-ci.yml  # https://gitlab.com/gitlab-org/gitlab/blob/master/lib/gitlab/ci/templates/Terraform/Base.latest.gitlab-ci.yml
 
 stages:
-  - stg_validate
-  - stg_plan
-  - stg_apply
-  - stg_destroy
+  - validate
+  - gen-env
+  - tf_plan
+  - tf_apply
 
-job-tf-validate:
-  stage: stg_validate
+check-file:
+  stage: validate
   script:
     - echo " Validating my terraform code"
     - terraform validate
@@ -29,14 +29,14 @@ job-tf-validate:
 #     refs:
 #       - master
 
-jb-tf-plan:
-  stage: stg_plan
+generate-environment:
+  stage: gen-env
   script:
     - random_string=$(echo $RANDOM | md5sum | head -c 5);
     - echo "Generating terraform environment file"
-    - echo $GITLAB_USER_LOGIN
-    - echo $random_string
-    - ./not-tfgen.sh $GITLAB_USER_LOGIN_${random_string} vm2.txt
+    - echo $GITLAB_USER_LOGIN_${random_string}
+    - folder = $GITLAB_USER_LOGIN_${random_string}
+    - ./not-tfgen.sh ${folder} vm.txt
   rules:
     - exists:
         - vm.txt
@@ -46,14 +46,15 @@ jb-tf-plan:
   #   paths:
   #     - plan
 
-# jb-tf-apply:
-#   stage: stg_apply
-#   script:
-#     - echo "Spinning up resources via terraform apply step"
-#     - terraform apply --auto-approve plan
-#     - terraform state list
-#   when: always
-#   allow_failure: false
+tf-plan:
+   stage: tf_plan
+   script:
+     - echo "Spinning up resources via terraform apply step"
+     - cd ${folder}
+     - terraform plan
+     - terraform state list
+   when: always
+   allow_failure: false
 #   artifacts:
 #     paths:
 #       - terraform.tfstate
