test yml 7 to provisioning

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,8 +34,10 @@ generate-environment:
   script:
     - random_string=$(echo $RANDOM | md5sum | head -c 5);
     - echo "Generating terraform environment file"
-    - echo $GITLAB_USER_LOGIN_${random_string}
-    - folder = $GITLAB_USER_LOGIN_${random_string}
+    - echo $GITLAB_USER_LOGIN_
+    - echo ${random_string}
+    - folder=($GITLAB_USER_LOGIN_${random_string});
+    - echo $folder
     - ./not-tfgen.sh ${folder} vm.txt
   rules:
     - exists:
