--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,11 +34,9 @@ generate-environment:
   script:
     - random_string=$(echo $RANDOM | md5sum | head -c 5);
     - echo "Generating terraform environment file"
-    - echo $GITLAB_USER_LOGIN
-    - echo ${random_string}
-    - folder=$GITLAB_USER_LOGIN_${random_string};
-    - echo $folder
-    - ./not-tfgen.sh ${folder} vm.txt
+    - ./not-tfgen.sh $GITLAB_USER_LOGIN_${random_string} vm.txt
+    - cd $GITLAB_USER_LOGIN_${random_string}
+    - terraform plan
   rules:
     - exists:
         - vm.txt
@@ -48,16 +46,16 @@ generate-environment:
   #   paths:
   #     - plan
 
-tf-plan:
-   stage: tf_plan
-   script:
-     - echo "Spinning up resources via terraform apply step"
-     - cd ${folder}
-     - terraform plan
-     - terraform state list
-   when: always
-   allow_failure: false
-   tags: [kvm]
+# tf-plan:
+#    stage: tf_plan
+#    script:
+#      - echo "Spinning up resources via terraform apply step"
+#      - cd ${folder}
+#      - terraform plan
+#      - terraform state list
+#    when: always
+#    allow_failure: false
+#    tags: [kvm]
 #   artifacts:
 #     paths:
 #       - terraform.tfstate
