--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,8 @@ generate-environment:
     - echo ${folder}
     - ./not-tfgen.sh ${folder} vm.txt
     - cd ${folder}
+    - mkdir -p ~/.local/share/terraform/plugins/registry.terraform.io/dmacvicar/libvirt/0.6.2/linux_amd64
+    - mv provider/terraform-provider-libvirt ~/.local/share/terraform/plugins/registry.terraform.io/dmacvicar/libvirt/0.6.2/linux_amd64
     - terraform init
     - terraform plan
   rules:
