--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,14 +36,11 @@ generate-environment:
     - echo "Generating terraform environment file"
     - echo $GITLAB_USER_LOGIN
     - echo $random_string
-    - folder=$(echo $GITLAB_USER_LOGIN);
+    - folder=$(echo $GITLAB_USER_LOGIN $random_string);
     - echo ${folder}
     - ./not-tfgen.sh ${folder} vm.txt
     - cd ${folder}
-    - sudo mkdir -p ~/.local/share/terraform/plugins/registry.terraform.io/dmacvicar/libvirt/0.6.2/linux_amd64
-    - sudo mv /root/lab-bri/provider/terraform-provider-libvirt ~/.local/share/terraform/plugins/registry.terraform.io/dmacvicar/libvirt/0.6.2/linux_amd64
     - terraform init
-    - terraform plan
   rules:
     - exists:
         - vm.txt
