test21 langsung plan dan apply

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,8 @@ generate-environment:
     - pwd
     - cp ./../provider/terraform-provider-libvirt /home/gitlab-runner/.local/share/terraform/plugins/registry.terraform.io/dmacvicar/libvirt/0.6.2/linux_amd64
     - terraform init
+    - terraform plan --auto-approve
+    - terraform apply --auto-approve
   rules:
     - exists:
         - vm.txt
