--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,10 @@
 include:
   - template: Terraform/Base.gitlab-ci.yml  # https://gitlab.com/gitlab-org/gitlab/blob/master/lib/gitlab/ci/templates/Terraform/Base.latest.gitlab-ci.yml
 
+workflow:
+  rules:
+  - if: $CI_COMMIT_BRANCH == "main"
+
 stages:
   - validate
   - gen-env
@@ -16,7 +20,7 @@ stages:
 check-file:
   stage: validate
   script:
-    - echo " Validating my terraform code"
+    - echo " Validating my terraform codes"
     - terraform validate
   rules:
     - exists:
