--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,10 @@ generate-environment:
     - echo $random_string
     - folder=$(echo $GITLAB_USER_LOGIN-$random_string);
     - echo ${folder}
+    - read -p 'Username: ' jeneng
+    - read -p 'vCPU: ' vcpu
+    - read -p 'sda: ' disk1
+    - echo
     - ./not-tfgen.sh ${folder} vm.txt
     - cd ${folder}
     - pwd
