Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,11 @@ generate-environment:
     - echo $random_string
     - folder=$(echo $GITLAB_USER_LOGIN-$random_string);
     - echo ${folder}
+    - echo -n  "Name: "; read jeneng
+    - echo -n  "vcpu: "; read vcpu
+    - echo -n  "ram: "; read ram
+    - echo -n  "sda: "; read disk1
+    - echo
     - ./not-tfgen.sh ${folder} vm.txt
     - cd ${folder}
     - pwd
