--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,12 @@ stages:
 check-file:
   stage: validate
   script:
+    - echo $var
+    - cat vm-tmp.txt > vm.txt
+    - sed -i "s/nama/$(echo $var | awk '{print $1}')/g" vm.txt
+    - sed -i "s/icpu/$(echo $var | awk '{print $2}')/g" vm.txt
+    - sed -i "s/ram/$(echo $var | awk '{print $3}')/g" vm.txt
+    - sed -i "s/sda/$(echo $var | awk '{print $4}')/g" vm.txt
     - echo " Validating my terraform codes"
     - terraform validate
   rules:
@@ -43,10 +49,6 @@ generate-environment:
     - folder=$(echo $GITLAB_USER_LOGIN-$random_string);
     - echo ${folder}
     - echo $var
-    -  sed -i "s/nama/$(echo $var | awk '{print $1}')/g" vm.txt
-    -  sed -i "s/icpu/$(echo $var | awk '{print $2}')/g" vm.txt
-    -  sed -i "s/ram/$(echo $var | awk '{print $3}')/g" vm.txt
-    -  sed -i "s/sda/$(echo $var | awk '{print $4}')/g" vm.txt
     - ./not-tfgen.sh ${folder} vm.txt
     - cd ${folder}
     - pwd
