--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,15 +26,15 @@ check-file:
     - sed -i "s/icpu/$(echo $var | awk '{print $2}')/g" vm.txt
     - sed -i "s/ram/$(echo $var | awk '{print $3}')/g" vm.txt
     - sed -i "s/sda/$(echo $var | awk '{print $4}')/g" vm.txt
-    - sleep 1m
+#    - sleep 1m
     - cat vm.txt
     - echo " Validating my terraform codes"
-#    - terraform validate
-#  rules:
-#    - exists:
-#        - vm.txt
-#    - when: never
-#  tags: [kvm]
+    - terraform validate
+  rules:
+    - exists:
+        - vm.txt
+    - when: never
+  tags: [kvm]
 #   needs:
 #     - job: check-vm-txt
 #   except:
