--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,9 @@
 include:
   - template: Terraform/Base.gitlab-ci.yml  # https://gitlab.com/gitlab-org/gitlab/blob/master/lib/gitlab/ci/templates/Terraform/Base.latest.gitlab-ci.yml
 
-workflow:
-  rules:
-  - if: $CI_COMMIT_BRANCH == "rofiq"
+#workflow:
+#  rules:
+#  - if: $CI_COMMIT_BRANCH == "rofiq"
 
 stages:
   - validate
