--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,15 +20,6 @@ stages:
 check-file:
   stage: validate
   script:
-    - echo $var
-    - cat vm-tmp.txt > vm.txt
-    - sed -i "s/nama/$(echo $var | awk '{print $1}')/g" vm.txt
-    - sed -i "s/icpu/$(echo $var | awk '{print $2}')/g" vm.txt
-    - sed -i "s/ram/$(echo $var | awk '{print $3}')/g" vm.txt
-    - sed -i "s/sda/$(echo $var | awk '{print $4}')/g" vm.txt
-    - sed -i "s/sdb/$(echo $var | awk '{print $5}')/g" vm.txt
-#    - sleep 1m
-    - cat vm.txt
     - echo " Validating my terraform codes"
     - terraform validate
   rules:
@@ -45,14 +36,22 @@ check-file:
 generate-environment:
   stage: gen-env
   script:
+    - echo $var
+    - cat vm.txt
+    - cat vm-tmp.txt > vm.txt
+    - sed -i "s/nama/$(echo $var | awk '{print $1}')/g" vm.txt
+    - sed -i "s/icpu/$(echo $var | awk '{print $2}')/g" vm.txt
+    - sed -i "s/ram/$(echo $var | awk '{print $3}')/g" vm.txt
+    - sed -i "s/sda/$(echo $var | awk '{print $4}')/g" vm.txt
+    - sed -i "s/sdb/$(echo $var | awk '{print $5}')/g" vm.txt
+    - sleep 10s
+    - cat vm.txt
     - random_string=$(echo $RANDOM | md5sum | head -c 5);
     - echo "Generating terraform environment file"
     - echo $GITLAB_USER_LOGIN
     - echo $random_string
     - folder=$(echo $GITLAB_USER_LOGIN-$random_string);
     - echo ${folder}
-    - echo $var
-    - cat vm.txt
     - ./not-tfgen.sh ${folder} vm.txt
     - cd ${folder}
     - pwd
