--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,6 +58,26 @@ generate-environment:
   #   paths:
   #     - plan
 
+destroy:
+  stage: Destroying
+  script:
+   - random_string=$(echo $RANDOM | md5sum | head -c 5)
+   - echo "Destroying VM"
+   - echo $GITLAB_USER_LOGIN
+   - echo $random_string
+   - folder=$(echo $GITLAB_USER_LOGIN-$random_string);
+   - echo ${folder}
+   - cd ${folder}
+   - pwd 
+   - terraform destroy --auto-approve
+  rules:
+   - if: $CI_COMMIT_BRANCH == "main"
+   - exists:
+       - vm.txt
+   - when: manual
+  tags: [kvm]
+
+
 # tf-plan:
 #    stage: tf_plan
 #    script:
