--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,9 @@ workflow:
   rules:
   - if: $CI_COMMIT_BRANCH == "main"
 
+variables:
+  test_var: echo $RANDOM | md5sum | head -c 5;
+
 stages:
   - validate
   - gen-env
@@ -37,11 +40,10 @@ check-file:
 generate-environment:
   stage: gen-env
   script:
-    - random_string=$(echo $RANDOM | md5sum | head -c 5);
     - echo "Generating terraform environment file"
     - echo $GITLAB_USER_LOGIN
-    - echo $random_string
-    - folder=$(echo $GITLAB_USER_LOGIN-$random_string);
+    - echo $test_var
+    - folder=$(echo $GITLAB_USER_LOGIN-$test_var);
     - echo ${folder}
     - ./not-tfgen.sh ${folder} vm.txt
     - cd ${folder}
@@ -55,21 +57,15 @@ generate-environment:
         - vm.txt
     - when: never
   tags: [kvm]
-  # artifacts:
-  #   paths:
-  #     - plan
 
 destroy:
   stage: destroying
   script:
-   - random_string=$(echo $RANDOM | md5sum | head -c 5)
-   - echo "Destroying VM"
-   - echo $GITLAB_USER_LOGIN
-   - echo $random_string
-   - folder=$(echo $GITLAB_USER_LOGIN-$random_string);
+   - echo $test_var
+   - folder=$(echo $GITLAB_USER_LOGIN-$test_var)
    - echo ${folder}
    - cd ${folder}
-   - pwd 
+   - pwd
    - terraform destroy --auto-approve
   rules:
    - exists:
