--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@
 #   - if: $CI_COMMIT_BRANCH == "main"
 
 variables:
-  env_name: $GITLAB_USER_LOGIN-$CI_COMMIT_SHORT_SHA;
+  env_name: $GITLAB_USER_LOGIN-$CI_COMMIT_SHORT_SHA
 
 stages:
   - validate
