--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,7 +56,7 @@ job-apply:
     - echo "your workdir - $(pwd)"
     - id -G
     # - terraform apply
-    - echo "$env_name,create,$(date '+%Y-%m-%d-%H:%M:%S')" >> ../list_env.csv
+    - echo "$env_name,create,$(date '+%Y-%m-%d-%H:%M:%S')" | tee list_env.csv
   tags: [kvm]
 
 
