--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ job-generate:
     - cd $env_name
   tags: [kvm]
   rules:
-  - if $env_action == "create"
+  - if: $env_action == "create"
 
 # job-init:
 #   stage: init
